# pyVFD

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyVFD.py  pyVFD_Example.py  pyproject.toml  ~$Graphic_Design_v3.pptx
Resources/: SwitchBuilder.py  tkVFD_clock_example.py
Tools/: BenchTest.py
src/: pyVFD.py  pyVFD_example.py
src/pyVFD/: CharLUTs.py  pyVFD.py  pyVFD_example.py  pyVFD_seg16  pyVFD_seg16.py
tkVFD/: seg16.py  seg7.py  tkVFD.py
